# sensorlab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
artifacts/: results.json
data/: README.md
notebooks/: 01_eda.ipynb  02_detection.ipynb  03_diagnosis.ipynb  04_rul.ipynb  05_decision_layer.ipynb
scripts/: build_notebooks.py  download_tep.py  prepare_tep.py  train_all.py
src/sensorlab/: __init__.py  _compat.py  config.py
src/sensorlab/data/: __init__.py  loader.py  preprocess.py  synthetic.py
src/sensorlab/decision/: __init__.py  cost.py
src/sensorlab/detection/: __init__.py  autoencoder.py  base.py  iforest.py  metrics.py  spc.py
src/sensorlab/diagnosis/: __init__.py  classifier.py  explain.py
src/sensorlab/rul/: __init__.py  quantile.py  survival.py
src/sensorlab/viz/: __init__.py  plots.py
tests/: conftest.py  test_config.py  test_data_loader.py  test_data_synthetic.py  test_decision.py  test_detection_autoencoder.py  test_detection_iforest.py  test_detection_metrics.py  test_detection_spc.py  test_diagnosis.py  test_preprocess.py  test_rul.py
