[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "sensorlab"
version = "0.1.0"
description = "Fault detection, diagnosis & remaining-useful-life on the Tennessee Eastman chemical process benchmark"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gemma" }]
requires-python = ">=3.11"
keywords = [
  "anomaly-detection",
  "fault-diagnosis",
  "predictive-maintenance",
  "tennessee-eastman",
  "process-monitoring",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "xgboost>=2.0",
  "shap>=0.44",
  "torch>=2.1",
  "statsmodels>=0.14",
  "joblib>=1.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
app = ["streamlit>=1.30", "plotly>=5.18"]
survival = ["lifelines>=0.27"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "ipykernel>=6.27",
  "jupyter>=1.0",
  "nbformat>=5.9",
]

[project.urls]
Homepage = "https://github.com/Gemmagf/sensorlab"
Issues = "https://github.com/Gemmagf/sensorlab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sensorlab"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks", "data", "models", "artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "C4"]
ignore = [
  "E501",   # line length handled by formatter
  "B008",   # function calls in defaults are fine for our config dataclasses
  "RUF059", # unused unpacking entries are idiomatic for tuple-returning APIs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::UserWarning",
  "ignore::FutureWarning",
]
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
]
